# pyrig-overrides

./: README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: health_check.yml
docs/: api.md  index.md
src/pyrig_overrides/: __init__.py
src/pyrig_overrides/rig/: __init__.py
src/pyrig_overrides/rig/configs/: __init__.py  pyproject.py
src/pyrig_overrides/rig/configs/docs/: __init__.py  builder.py
src/pyrig_overrides/rig/configs/remote_version_control/workflows/: health_check.py
src/pyrig_overrides/rig/tools/: __init__.py
src/pyrig_overrides/rig/tools/dependencies/: __init__.py  auditor.py
tests/test_pyrig_overrides/test_rig/test_configs/: test_pyproject.py
tests/test_pyrig_overrides/test_rig/test_configs/test_docs/: test_builder.py
tests/test_pyrig_overrides/test_rig/test_configs/test_remote_version_control/test_workflows/: test_health_check.py
tests/test_pyrig_overrides/test_rig/test_tools/test_dependencies/: test_auditor.py
