[project]
name = "pyrig-overrides"
version = "4.15.0"
description = "A simple package that contains overrides for pyrig."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Winipedia" },
]
maintainers = [
  { name = "Winipedia" },
]
keywords = [
  "automation",
  "boilerplate",
  "ci-cd",
  "code-quality",
  "configuration",
  "developer-tools",
  "devops",
  "project-setup",
  "project-template",
  "pyrig",
  "scaffolding",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Installation/Setup",
  "Topic :: System :: Software Distribution",
  "Typing :: Typed",
]
dependencies = [
  "pyrig>=18.3.4",
  "pyrig-pypi>=3.1.2",
  "pyrig-runtime>=3.5.2",
]

[project.urls]
Changelog = "https://github.com/Winipedia/pyrig-overrides/releases"
Documentation = "https://Winipedia.github.io/pyrig-overrides"
Homepage = "https://github.com/Winipedia/pyrig-overrides"
Issues = "https://github.com/Winipedia/pyrig-overrides/issues"
Source = "https://github.com/Winipedia/pyrig-overrides"

[project.scripts]
pyrig-overrides = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
  "bandit",
  "deptry",
  "detect-secrets",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-mermaid2-plugin",
  "mkdocstrings[python]",
  "pip-audit",
  "pre-commit-hooks",
  "prek",
  "pyrig",
  "pyrig-codecov>=3.3.0",
  "pyrig-pypi>=3.5.0",
  "pytest",
  "pytest-cov",
  "pytest-randomly",
  "ruff",
  "rumdl",
  "ryl",
  "shellcheck-py",
  "shfmt-py",
  "tombi",
  "ty",
  "typos",
]

[build-system]
requires = [
  "uv-build",
]
build-backend = "uv_build"

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "pyrig-runtime",
]

[tool.pytest]
addopts = [
  "--cov-branch",
  "--cov-fail-under=100",
  "--cov-report=term-missing:skip-covered",
  "--cov-report=xml",
  "--cov=pyrig_overrides",
]
filterwarnings = [
  "error",
]
strict = true
testpaths = [
  "tests",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
